Project started/Renamed. Added First/Last name models

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-    "name": "proj_4",
+    "name": "NPCGenerator",
     "scripts": {
       "build": "cd client && npm install && npm run build && cd ..",
       "postinstall": "npm run build && echo 'Client built!'"
