--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
-
 {
-    "name": "NPCGenerator",
-    "scripts": {
-      "build": "cd client && npm install && npm run build && cd ..",
-      "postinstall": "npm run build && echo 'Client built!'"
-    }
+  "name": "NPCGenerator",
+  "scripts": {
+    "build": "cd client && npm install && npm run build && cd ..",
+    "postinstall": "npm run build && echo 'Client built!'"
+  },
+  "dependencies": {
+    "react-router-dom": "^5.1.2"
   }
+}
